kube/deployment.env.yaml
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: repominder-ingress
  annotations:
    external-dns.alpha.kubernetes.io/hostname: ${SITE}
    external-dns.alpha.kubernetes.io/target: ${KILO_IP}
spec:
  tls:
  - hosts:
    - ${SITE}
    secretName: repominder-cert
  rules:
  - host: ${SITE}
    http:
      paths:
      - path: /assets
        pathType: Prefix
        backend:
          serviceName: repominder-service
          servicePort: 80
      - path: /
        pathType: Prefix
        backend:
          serviceName: repominder-service
          servicePort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: repominder-service
spec:
  selector:
    app: repominder
  ports:
  - name: web
    port: 8000
  - name: static
    port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: repominder
spec:
  selector:
    matchLabels:
      app: repominder
  replicas: 1
  template:
    metadata:
      labels:
        app: repominder
    spec:
      nodeSelector:
        kubernetes.io/hostname: kilo
      imagePullSecrets:
      - name: registry-credentials
      containers:
      - name: web
        image: ${DOCKER_REPO}/repominder:k8s
        imagePullPolicy: Always
        volumeMounts:
        - name: appvol
          mountPath: /opt/repominder
        ports:
        - containerPort: 8000
      - name: static
        image: nginx
        volumeMounts:
        - name: assetvol
          mountPath: /usr/share/nginx/html/assets
        ports:
        - containerPort: 80
      volumes:
      - name: appvol
        hostPath:
          path: /opt/k3slocal/repominder
          type: DirectoryOrCreate
      - name: assetvol
        hostPath:
          path: /opt/k3slocal/repominder-static
          type: DirectoryOrCreate
      tolerations:
      - key: "node.kubernetes.io/unreachable"
        operator: "Exists"
        effect: "NoExecute"
        tolerationSeconds: 10
      - key: "node.kubernetes.io/not-ready"
        operator: "Exists"
        effect: "NoExecute"
        tolerationSeconds: 10
